[package]
categories = ["data-structures", "parsing", "memory-management"]
description = "High-performance zero-copy string handles for Serde, backed by arcstr."
edition = "2021"
homepage = "https://github.com/CyberNestSticks-LLC/zcstring.git"
keywords = ["zero-copy", "serde", "json", "arcstr", "zero-allocation"]
license = "MIT OR Apache-2.0"
name = "zcstring"
readme = "README.md"
repository = "https://github.com/CyberNestSticks-LLC/zcstring.git"
rust-version = "1.68"
version = "0.3.1"

[dependencies]
arcstr = { version = "1.2", default-features = false, features = ["substr"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]
## Enables integration with the Rust standard library, 
## specifically for `String` conversions.
std = ["arcstr/std"]

## Enables support for `serde` serialization and deserialization, 
## including specialized `serde_json` integration.
serde_json = ["arcstr/serde", "dep:serde", "dep:serde_json"]

## Enable std and serde_json by default
default = ["std", "serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
